// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders component should render Orders with an empty message 1`] = `<div />`;

exports[`Orders component should render Orders with indivual orders 1`] = `
<div>
  <Order
    key="xyz986"
    price={230}
    quantity={22}
    type="BUY"
    userId="1"
  />
  <Order
    key="xyz987"
    price={2300}
    quantity={32}
    type="BUY"
    userId="3"
  />
</div>
`;

exports[`Orders component should render Orders with indivual orders 2`] = `
<div>
  <Order
    key="xyz998"
    price={230}
    quantity={222}
    type="SELL"
    userId="1"
  />
  <Order
    key="xyz989"
    price={230}
    quantity={22}
    type="SELL"
    userId="2"
  />
</div>
`;
